src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>FLAGS__Case_Flag_Business_Account__c</fullName>
        <description>Deprecated. Use Flag or Flag (BH) instead.</description>
        <formula>IF(ISNULL(FLAGS__ViewedFlag__c),null,

IMAGE( &quot;/servlet/servlet.FileDownload?fs=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp;

IF(FLAGS__Case_Flag_Business_Age__c &gt; Account.FLAGS__AcctTimeOffset4__c , 
 $Setup.FLAGS__FlagPref__c.FLAGS__Offset4Image__c,

IF(FLAGS__Case_Flag_Business_Age__c &gt;= Account.FLAGS__AcctTimeOffset3__c , 
 $Setup.FLAGS__FlagPref__c.FLAGS__Offset3Image__c,

IF(FLAGS__Case_Flag_Business_Age__c &gt;= Account.FLAGS__AcctTimeOffset2__c, 
$Setup.FLAGS__FlagPref__c.FLAGS__Offset2Image__c,

IF(FLAGS__Case_Flag_Business_Age__c &gt;= Account.FLAGS__AcctTimeOffset1__c,
$Setup.FLAGS__FlagPref__c.FLAGS__Offset1Image__c,

$Setup.FLAGS__FlagPref__c.FLAGS__BlankOffsetImage__c))))

,&quot;&quot;, 16, 16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zDep Case Flag Business (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Business_Age__c</fullName>
        <description>The total amount of time (in business hours) since the Case Flag was set.</description>
        <formula>FLAGS__PreviousBusinessHours__c + FLAGS__CurrentBusinessHours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Flag Business Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Business_Default__c</fullName>
        <description>Deprecated. Use Flag or Flag (BH) instead.</description>
        <formula>IF(ISNULL(FLAGS__ViewedFlag__c),null,

IMAGE( &quot;/servlet/servlet.FileDownload?fs=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp;

IF(FLAGS__Case_Flag_Business_Age__c &gt; $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset4__c, 
 $Setup.FLAGS__FlagPref__c.FLAGS__Offset4Image__c,

IF(FLAGS__Case_Flag_Business_Age__c &gt;= $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset3__c , 
 $Setup.FLAGS__FlagPref__c.FLAGS__Offset3Image__c,

IF(FLAGS__Case_Flag_Business_Age__c &gt;= $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset2__c, 
$Setup.FLAGS__FlagPref__c.FLAGS__Offset2Image__c,

IF(FLAGS__Case_Flag_Business_Age__c &gt;= $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset1__c,
$Setup.FLAGS__FlagPref__c.FLAGS__Offset1Image__c,

$Setup.FLAGS__FlagPref__c.FLAGS__BlankOffsetImage__c))))

,&quot;&quot;, 16, 16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zDep Case Flag Business (Default)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Business_Time_Days__c</fullName>
        <description>Renders the day portion of the Case Flag in business hours as &quot;X Days&quot;.</description>
        <formula>IF(FLAGS__Case_Flag_Business_Age__c &lt; 24, null,
TEXT(ROUND(FLAGS__Case_Flag_Business_Age__c /24-0.49999,0)) + &apos; Days&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Flag Business Time Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Business_Time_Hours__c</fullName>
        <description>Renders the hour portion of the Case Flag in business hours as &quot;Y Hours&quot;.</description>
        <formula>TEXT(ROUND(MOD(FLAGS__Case_Flag_Business_Age__c,24)-0.49999,0)) + &apos; Hours&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Flag Business Time Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Business_Time_Mins__c</fullName>
        <description>Renders the minute portion of the Case Flag in business hours as &quot;Z Minutes&quot;.</description>
        <formula>TEXT(ROUND(MOD(FLAGS__Case_Flag_Business_Age__c,1) * 60,0)) + &apos; Minutes&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Flag Business Time Mins</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Business_Time__c</fullName>
        <description>Renders the Case Flag in business hours as &quot;X Days Y Hours Z Minutes&quot;.</description>
        <formula>IF(ISNULL(FLAGS__ViewedFlag__c),null,
FLAGS__Case_Flag_Business_Time_Days__c + &apos; &apos; +
FLAGS__Case_Flag_Business_Time_Hours__c + &apos; &apos; +
FLAGS__Case_Flag_Business_Time_Mins__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Flag Business Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Business__c</fullName>
        <description>This should be used  to display the Case Flag if your organization is using business hours.</description>
        <formula>IF(ISNULL(FLAGS__ViewedFlag__c),null, 
IF(FLAGS__Case_Flag_Business_Age__c &gt; (IF(ISBLANK(FLAGS__CaseTimeOffset4__c), $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset4__c,FLAGS__CaseTimeOffset4__c)), 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset4Image__c, &quot;L4&quot;, 16, 16), 
IF(FLAGS__Case_Flag_Business_Age__c &gt;= (IF(ISBLANK(FLAGS__CaseTimeOffset3__c), $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset3__c,FLAGS__CaseTimeOffset3__c)), 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset3Image__c, &quot;L3&quot;, 16, 16), 
IF(FLAGS__Case_Flag_Business_Age__c &gt;= (IF(ISBLANK(FLAGS__CaseTimeOffset2__c), $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset2__c,FLAGS__CaseTimeOffset2__c)), 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset2Image__c, &quot;L2&quot;, 16, 16), 
IF(FLAGS__Case_Flag_Business_Age__c &gt;= (IF(ISBLANK(FLAGS__CaseTimeOffset1__c), $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset1__c,FLAGS__CaseTimeOffset1__c)), 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset1Image__c, &quot;L1&quot;,16,16), 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__BlankOffsetImage__c, &quot;L0&quot;,16,16)) 
))) 
)</formula>
        <label>Flag (BH)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Default__c</fullName>
        <description>Deprecated. Use Flag or Flag (BH) instead.</description>
        <formula>IF((NOW() - FLAGS__ViewedFlag__c)*24 &gt; $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset4__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset4Image__c, &quot;L4&quot;, 16, 16), 
IF((NOW() - FLAGS__ViewedFlag__c)*24 &gt; $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset3__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset3Image__c, &quot;L3&quot;, 16, 16), 
IF((NOW() - FLAGS__ViewedFlag__c)*24 &gt; $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset2__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset2Image__c, &quot;L2&quot;, 16, 16), 
IF((NOW() - FLAGS__ViewedFlag__c)*24 &gt; $Setup.FLAGS__FlagPref__c.FLAGS__TimeOffset1__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset1Image__c, &quot;L1&quot;,16,16), 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__BlankOffsetImage__c, &quot;L0&quot;,16,16)) 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zDep Case Flag (Default)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Time_Days__c</fullName>
        <description>Renders the day portion of the Case Flag as &quot;X Days&quot;.</description>
        <formula>IF(ISNULL(FLAGS__ViewedFlag__c) || FLAGS__Case_Flag_Age__c &lt; 24, null, TEXT(FLOOR(FLAGS__Case_Flag_Age__c /24)) + &apos; Days&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Flag Time Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Time_Hours__c</fullName>
        <description>Renders the hours portion of the Case Flag as &quot;Y Hours&quot;.</description>
        <formula>IF(ISNULL(FLAGS__ViewedFlag__c) || FLAGS__Case_Flag_Age__c &lt; 1, null, TEXT(FLOOR(MOD(FLAGS__Case_Flag_Age__c,24))) + &apos; Hours&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Flag Time Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Time_Mins__c</fullName>
        <description>Renders the minute portion of the Case Flag as &quot;Z Minutes&quot;.</description>
        <formula>IF(ISNULL(FLAGS__ViewedFlag__c), null, TEXT(ROUND(MOD(FLAGS__Case_Flag_Age__c,1) * 60,0)) + &apos; Minutes&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Flag Time Mins</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_Time__c</fullName>
        <description>Renders the Case Flag Age as &quot;xx Days xx Hours xx Minutes&quot;.</description>
        <formula>IF(ISNULL(FLAGS__Case_Flag_Time_Days__c), null, FLAGS__Case_Flag_Time_Days__c + &apos; &apos;) +
IF(ISNULL(FLAGS__Case_Flag_Time_Hours__c), null, FLAGS__Case_Flag_Time_Hours__c + &apos; &apos;) +
IF(ISNULL(FLAGS__Case_Flag_Time_Mins__c), null, FLAGS__Case_Flag_Time_Mins__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Flag Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__CurrentBusinessHours__c</fullName>
        <description>The amount of business hours that have lapsed on the current day.</description>
        <formula>IF(ISNULL(FLAGS__ViewedFlag__c) || FLAGS__CaseFlagsBusinessHours__r.FLAGS__TodayStartTime__c &gt; NOW() || FLAGS__ViewedFlag__c &gt; FLAGS__CaseFlagsBusinessHours__r.FLAGS__TodayEndTime__c,0,(
IF(FLAGS__CaseFlagsBusinessHours__r.FLAGS__TodayEndTime__c &lt; NOW(),FLAGS__CaseFlagsBusinessHours__r.FLAGS__TodayEndTime__c,NOW()) - IF(FLAGS__CaseFlagsBusinessHours__r.FLAGS__TodayStartTime__c &gt; FLAGS__ViewedFlag__c,FLAGS__CaseFlagsBusinessHours__r.FLAGS__TodayStartTime__c,FLAGS__ViewedFlag__c))*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Business Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Enable_Case_Flags__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Case Flags</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__EndPoint__c</fullName>
        <description>The earlier of the current time and the end of the business day. Used in the computation of business hours.</description>
        <formula>MIN(FLAGS__NowHours__c,  FLAGS__CaseFlagsBusinessHours__r.FLAGS__EndTimeHours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Initial_Response_Business_Hours__c</fullName>
        <description>The business hours between Date/Time Opened and Initial Response, based on the business hours assigned to the case.</description>
        <label>Initial Response Business Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Initial_Response_Hours__c</fullName>
        <description>The hours between Date/Time Opened and Initial Response.</description>
        <formula>(FLAGS__Initial_Response__c - CreatedDate) * 24</formula>
        <label>Initial Response Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Initial_Response__c</fullName>
        <description>Timestamp of Initial Response set the first time the Case Flag is cleared.</description>
        <label>Initial Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLAGS__NowHours__c</fullName>
        <description>The current time expressed as the hours elapsed since midnight. Used in the computation of business hours.</description>
        <formula>24*(NOW() -  FLAGS__CaseFlagsBusinessHours__r.FLAGS__Midnight__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Now Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__PreviousBusinessHours__c</fullName>
        <description>The amount of business hours that have lapsed prior to, but not including, the current day.</description>
        <label>Previous Business Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__StartPoint__c</fullName>
        <description>The later of the Case Flag Date/Time hours and start of the business day. Used in the computation of business hours.</description>
        <formula>MAX(FLAGS__ViewedFlagHours__c,   FLAGS__CaseFlagsBusinessHours__r.FLAGS__StartTimeHours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__ViewedFlagHours__c</fullName>
        <description>The Case Flag Date/Time expressed as the hours elapsed since midnight.</description>
        <formula>24*(FLAGS__ViewedFlag__c - FLAGS__CaseFlagsBusinessHours__r.FLAGS__Midnight__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Flag Date/Time Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__ViewedFlag__c</fullName>
        <description>The timestamp that the Case Flag was set.</description>
        <label>Case Flag Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Feature_Request__c</fullName>
        <label>Feature Request</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Future_Action_Date__c</fullName>
        <description>A date in the future for this case to be actioned.</description>
        <inlineHelpText>A date in the future for this case to be actioned.</inlineHelpText>
        <label>Future Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gateway_Reason_Code_detail__c</fullName>
        <description>Reason Code from Gateway with short description</description>
        <inlineHelpText>Reason Code from Gateway with short description</inlineHelpText>
        <label>Gateway Reason Code detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Reason_code__c</fullName>
        <description>Gateway Reason code</description>
        <inlineHelpText>Gateway Reason code</inlineHelpText>
        <label>Gateway Reason code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Reason_code_source__c</fullName>
        <label>Gateway Reason code source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADDACS [Amendment]</fullName>
                </value>
                <value>
                    <fullName>ADDACS [Cancellation]</fullName>
                </value>
                <value>
                    <fullName>ARUDD</fullName>
                </value>
                <value>
                    <fullName>AUDDIS</fullName>
                </value>
                <value>
                    <fullName>CARD</fullName>
                </value>
                <value>
                    <fullName>DDICA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GoCardlessDescription__c</fullName>
        <label>GoCardlessDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Scheduled_Callback_In_Past__c</fullName>
        <formula>OC_Scheduled_Callback__c &lt; NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Scheduled Callback In Past</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Live_Chat_User_Email__c</fullName>
        <label>Live Chat User Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Chat_User_Name__c</fullName>
        <label>Live Chat User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandate_ID__c</fullName>
        <label>Mandate ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Of_Supplement__c</fullName>
        <label>Name Of Supplement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NATC_Reason__c</fullName>
        <label>NATC Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Main Reader Deceased</fullName>
                </value>
                <value>
                    <fullName>Already Resubscribed</fullName>
                </value>
                <value>
                    <fullName>Duplicate Record</fullName>
                </value>
                <value>
                    <fullName>Serious Illness</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Newsagent_Issue_Type__c</fullName>
        <label>Newsagent Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closures</fullName>
                </value>
                <value>
                    <fullName>Amendments</fullName>
                </value>
                <value>
                    <fullName>Fire Theft &amp; Flood</fullName>
                </value>
                <value>
                    <fullName>Home Delivery Direct</fullName>
                </value>
                <value>
                    <fullName>Loss of Vouchers</fullName>
                </value>
                <value>
                    <fullName>Credit Enquires</fullName>
                </value>
                <value>
                    <fullName>Request for Vouchers/Monies</fullName>
                </value>
                <value>
                    <fullName>Supply Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Action_Description__c</fullName>
        <description>Information should be added to give a brief description of what the next action should be for the date set in &apos;Future Action Date&apos;. Max 255 characters.</description>
        <inlineHelpText>Information should be added to give a brief description of what the next action should be for the date set in &apos;Future Action Date&apos;. Max 255 characters.</inlineHelpText>
        <label>Future Action Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Times_Rescheduled__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field contains the number of times the case has been re-scheduled for an action in the future. This number is incremented by one every time a Customer Service Agent changes the &apos;Future Action Date&apos; on the case.</description>
        <inlineHelpText>This field contains the number of times the case has been re-scheduled for an action in the future. This number is incremented by one every time a Customer Service Agent changes the &apos;Future Action Date&apos; on the case.</inlineHelpText>
        <label>Number Of Times Rescheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OC_14_Days_Old__c</fullName>
        <formula>DATEVALUE(CreatedDate) &gt;= today()- 14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OC 14 Days Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OC_7_Days_Old__c</fullName>
        <description>Defines if 7 days passed since last batch update date.</description>
        <formula>AND(NOT(ISBLANK(OC_Batch_Updated_Date__c)), TODAY()-OC_Batch_Updated_Date__c &lt; 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Defines if 7 days passed since  last batch update date.</inlineHelpText>
        <label>OC 7 Days Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OC_Batch_Updated_Date__c</fullName>
        <description>Date the last time the outbound calling batch updated the record.</description>
        <inlineHelpText>Date the last time the outbound calling batch updated the record.</inlineHelpText>
        <label>Batch Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OC_Call_Stage__c</fullName>
        <description>Outbound call stage name</description>
        <inlineHelpText>Outbound call stage name</inlineHelpText>
        <label>Call Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T2</fullName>
                </value>
                <value>
                    <fullName>T2 Catch Up</fullName>
                </value>
                <value>
                    <fullName>TL1</fullName>
                </value>
                <value>
                    <fullName>TL2</fullName>
                </value>
                <value>
                    <fullName>BR1</fullName>
                </value>
                <value>
                    <fullName>CCEX1</fullName>
                </value>
                <value>
                    <fullName>DD Winback</fullName>
                </value>
                <value>
                    <fullName>DDCX</fullName>
                </value>
                <value>
                    <fullName>T2 28Days</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OC_DD_Stage_1_Call_Date_Time__c</fullName>
        <label>DD Winback Call Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OC_DD_Stage_1_No_Sale_Reason__c</fullName>
        <label>DD Winback No Sale Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_DD_Stage_1_Outcome__c</fullName>
        <label>DD Winback Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_DD_Stage_2_Call_Date_Time__c</fullName>
        <label>DDCX Call Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OC_DD_Stage_2_No_Sale_Reason__c</fullName>
        <label>DDCX No Sale Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_DD_Stage_2_Outcome__c</fullName>
        <label>DDCX Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_No_Sale_Reason__c</fullName>
        <description>The reason why there was no sales done during the call</description>
        <inlineHelpText>Please specify the reason why there was no sale during the call</inlineHelpText>
        <label>No Sale Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OC_Outcome__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Price Increase</fullName>
                </value>
                <value>
                    <fullName>Occasional Reader</fullName>
                </value>
                <value>
                    <fullName>Review of Personal Finances/Cannot Afford</fullName>
                </value>
                <value>
                    <fullName>Competitor Offer</fullName>
                </value>
                <value>
                    <fullName>Distribution Problems</fullName>
                </value>
                <value>
                    <fullName>Editorial Issues</fullName>
                </value>
                <value>
                    <fullName>Too Many Adverts</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Dislikes Broadsheet</fullName>
                </value>
                <value>
                    <fullName>Waitrose Offer</fullName>
                </value>
                <value>
                    <fullName>Voucher System</fullName>
                </value>
                <value>
                    <fullName>Personal Reason/Prefer Not to Say</fullName>
                </value>
                <value>
                    <fullName>Rejected Holiday Policy</fullName>
                </value>
                <value>
                    <fullName>Extended Holiday</fullName>
                </value>
                <value>
                    <fullName>Acq Offer</fullName>
                </value>
                <value>
                    <fullName>Family/Friend Offer</fullName>
                </value>
                <value>
                    <fullName>Service Issue</fullName>
                </value>
                <value>
                    <fullName>Emigration</fullName>
                </value>
                <value>
                    <fullName>Moving House UK</fullName>
                </value>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Illness</fullName>
                </value>
                <value>
                    <fullName>Serious Illness</fullName>
                </value>
                <value>
                    <fullName>Main Reader Deceased</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OC_Outbound_Calling_Viewed_Date__c</fullName>
        <description>Date on which the case was viewed in the Outbound Calling page</description>
        <inlineHelpText>Please specify when the case was viewed in the Outbound Calling page</inlineHelpText>
        <label>Outbound Calling Viewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OC_Outbound_Calling_Viewed_Stamp__c</fullName>
        <description>Date stamp used to track when the case was viewed. This field is auto-populated from controller.</description>
        <inlineHelpText>Date stamp used to track when the case was viewed. This field is auto-populated from controller.</inlineHelpText>
        <label>Outbound Calling Viewed DateTime Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OC_Outcome__c</fullName>
        <description>The outcome of the outbound call</description>
        <inlineHelpText>Please specify the outcome of the outbound call</inlineHelpText>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Answerphone</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Reschedule</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>No Sale</fullName>
                </value>
                <value>
                    <fullName>Cheque Sales</fullName>
                </value>
                <value>
                    <fullName>Call Completed</fullName>
                </value>
                <value>
                    <fullName>NATC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OC_Price_Priority_Score__c</fullName>
        <description>The formula field to calculate the price priority score</description>
        <formula>IF(OC_Priority_Score__c &gt;= 0, OC_Priority_Score__c + OC_Sub_Weekly_Price__c, OC_Priority_Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically calculated.</inlineHelpText>
        <label>Price Priority Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OC_Priority_Score__c</fullName>
        <description>Formula field to calculate priority score</description>
        <formula>IF( OC_Viewed_Timestamp_Critical__c , -2, IF(OR( ISPICKVAL( Status, &apos;Closed&apos;) , ISNULL( OC_Scheduled_Callback__c )),0, (NOW() - OC_Scheduled_Callback__c)*1440))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically calculated</inlineHelpText>
        <label>Priority Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OC_Queue_Priority__c</fullName>
        <description>Custom order of available cases for the dialer.</description>
        <formula>CASE(OC_Outcome__c,
  &apos;Reschedule&apos;, 0 ,
  &apos;Busy&apos;, 1, 
  CASE( Status,
       &apos;Not Started&apos;, 2,
       3
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Custom order of available cases for the dialer.</inlineHelpText>
        <label>OC Queue Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OC_Scheduled_Callback__c</fullName>
        <description>Date/Time field for new outbound call task filter logic. This field is auto-populated from controller.</description>
        <inlineHelpText>The field to hold the date and time when the callback need to be done. Enter the date and time when the call need to be rescheduled only if you want override standard rescheduling functionality.</inlineHelpText>
        <label>Scheduled Callback</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OC_Stage_1_Call_Date_Time__c</fullName>
        <description>The time call was made at the first stage</description>
        <inlineHelpText>The time call was made at the first stage</inlineHelpText>
        <label>T2 Call Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OC_Stage_1_No_Sale_Reason__c</fullName>
        <description>The no sale reason of the first call stage. This field is auto-populated from the selected outcome on the first call stage.</description>
        <inlineHelpText>The no sale reason of the first call stage. This field is auto-populated from the selected outcome on the first call stage.</inlineHelpText>
        <label>T2 No Sale Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_Stage_1_Outcome__c</fullName>
        <defaultValue>&quot;Not Started&quot;</defaultValue>
        <description>The outcome of the first call stage. This field is auto-populated from the selected outcome on the first call stage.</description>
        <inlineHelpText>The outcome of the first call stage. This field is auto-populated from the selected outcome on the first call stage.</inlineHelpText>
        <label>T2 Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_Stage_2_Call_Date_Time__c</fullName>
        <description>The time call was made at the second stage</description>
        <inlineHelpText>The time call was made at the second stage</inlineHelpText>
        <label>T2 Catch Up Call Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OC_Stage_2_No_Sale_Reason__c</fullName>
        <description>The no sale reason of the second call stage. This field is auto-populated from the selected outcome on the first call stage.</description>
        <inlineHelpText>The no sale reason of the second call stage. This field is auto-populated from the selected outcome on the first call stage.</inlineHelpText>
        <label>T2 Catch Up No Sale Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>